# social-media-posts

./: .gitignore  README.md  clean_tex_files.py  prompt.txt  pyproject.toml
.claude/skills/humanize-writing-en/: SKILL.md
.claude/skills/humanize-writing-es/: SKILL.md
.claude/skills/instagram-carousel/: SKILL.md  template.md
.claude/skills/linkedin-post/: SKILL.md  template.md
ArtificialIntelligence/ReasoningFrameworks/: reasoning_framework.tex
ArtificialIntelligence/ReasoningFrameworks/codes/: cot.py  reaAct.py  tot.py
Instagram/: README.md
Instagram/Headers/: Headers.tex
Instagram/MachineLearningMathematics/: MachineLearningMathematics.tex
Instagram/MachineLearningMathematics/codes/: newton_step.py
Instagram/MatematicasParaML/AlgebraLineal/: palette.tex
Instagram/MatematicasParaML/CalcularInversa/: caption.md  (+1 more)
JavaScript/: package-lock.json  package.json
JavaScript/Headers/: Headers.tex
JavaScript/Parallelization/: Parallelization.tex
JavaScript/Promises/: PromisesPart1.tex  PromisesPart2.tex  PromisesPart3.tex
JavaScript/Streams/: StreamsPart1.tex  StreamsPart2.tex  typesOfStreams.js
LinkedIn/Headers/: Article.tex  Headers.tex
LinkedIn/PythonDecorators/: DecoratorsArticle.tex  PythonDecorators.tex  README.md  caption.md
LinkedIn/PythonGenerators/: PythonGenerators.tex  README.md  caption.md
LinkedIn/SQLForBeginners/: SQLForBeginners.tex  caption.md
Photos/: README.md
Python/: pyproject.toml
Python/Concurrency/: concurrency_part1.tex  concurrency_part2.tex  concurrency_part3.tex
Python/ContextManagers/: context_managers.tex
Python/Decorators/: decorators.tex
Python/FastAPILatency/: FastAPILatency.tex  fast_api_latency.tex
Python/Generators/: fibonacci.py  generators.tex  generators_vs_list.py  iterator_protocol.py  log_processing.py  memory_comparison.py  yield_from_statement.py
Python/Headers/: Headers.tex
Python/Namespaces/: Namespaces.tex  namespaces.aux  namespaces.out
Python/Regex/: Regex.tex
publish/: .env.example  GRAPH_API.md  README.md  __init__.py  __main__.py  builder.py  graph_poster.py  poster.py  requirements.txt
(+156 files in other folders)
